//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  institutionalId String [unique, not null]
  email String [unique, not null]
  passwordHash String [not null]
  firstName String [not null]
  lastName String [not null]
  description String
  avatarUrl String
  bannerUrl String
  role UserRole [not null, default: 'BASE']
  categories InstitutionalCategory[] [not null]
  isActive Boolean [not null, default: false]
  isDeactivated Boolean [not null, default: false]
  deactivatedAt DateTime
  deletedAt DateTime
  keepContentOnDelete Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  verificationCodes verification_codes [not null]
  forumsAdministrated forums [not null]
  memberships forum_memberships [not null]
  moderatorOf forum_moderators [not null]
  posts posts [not null]
  comments comments [not null]
  likesOnPosts post_likes [not null]
  likesOnComments comment_likes [not null]
  reportsMade reports [not null]
  reportsReceived reports [not null]
  notificationsReceived notifications [not null]
  notificationsTriggered notifications [not null]
  institutionalContent institutional_content [not null]
}

Table verification_codes {
  id String [pk]
  userId String [not null]
  code String [not null]
  type VerificationCodeType [not null]
  expiresAt DateTime [not null]
  usedAt DateTime
  attempts Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
}

Table forums {
  id String [pk]
  name String [not null]
  description String
  type ForumType [not null, default: 'PUBLIC']
  avatarUrl String
  bannerUrl String
  adminId String
  isActive Boolean [not null, default: true]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  allowedCategories InstitutionalCategory[] [not null]
  admin users
  memberships forum_memberships [not null]
  moderators forum_moderators [not null]
  posts posts [not null]
  notifications notifications [not null]
}

Table forum_memberships {
  id String [pk]
  userId String [not null]
  forumId String [not null]
  status ForumMembershipStatus [not null, default: 'ACTIVE']
  joinedAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  forum forums [not null]

  indexes {
    (userId, forumId) [unique]
  }
}

Table forum_moderators {
  id String [pk]
  userId String [not null]
  forumId String [not null]
  assignedAt DateTime [default: `now()`, not null]
  user users [not null]
  forum forums [not null]

  indexes {
    (userId, forumId) [unique]
  }
}

Table posts {
  id String [pk]
  forumId String [not null]
  authorId String [not null]
  content String [not null]
  status PostStatus [not null, default: 'ACTIVE']
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  forum forums [not null]
  author users [not null]
  images post_images [not null]
  comments comments [not null]
  likes post_likes [not null]
  reports reports [not null]
}

Table post_images {
  id String [pk]
  postId String [not null]
  url String [not null]
  publicId String [not null]
  order Int [not null]
  createdAt DateTime [default: `now()`, not null]
  post posts [not null]

  indexes {
    (postId, order) [unique]
  }
}

Table comments {
  id String [pk]
  postId String [not null]
  authorId String [not null]
  parentId String
  content String [not null]
  depth Int [not null, default: 0]
  path String [not null]
  status CommentStatus [not null, default: 'ACTIVE']
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  post posts [not null]
  author users [not null]
  parent comments
  replies comments [not null]
  likes comment_likes [not null]
  reports reports [not null]
}

Table post_likes {
  id String [pk]
  userId String [not null]
  postId String [not null]
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
  post posts [not null]

  indexes {
    (userId, postId) [unique]
  }
}

Table comment_likes {
  id String [pk]
  userId String [not null]
  commentId String [not null]
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
  comment comments [not null]

  indexes {
    (userId, commentId) [unique]
  }
}

Table reports {
  id String [pk]
  reportedById String [not null]
  reportedUserId String [not null]
  targetType ReportTargetType [not null]
  postId String
  commentId String
  reason String [not null]
  status ReportStatus [not null, default: 'PENDING']
  resolution String
  resolvedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  reportedBy users [not null]
  reportedUser users [not null]
  post posts
  comment comments
}

Table notifications {
  id String [pk]
  recipientId String [not null]
  actorId String
  forumId String
  eventType NotificationEventType [not null]
  targetId String
  targetType NotificationTargetType [not null]
  read Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  recipient users [not null]
  actor users
  forum forums
}

Table institutional_content {
  id String [pk]
  title String [not null]
  body String [not null]
  category InstitutionalContentCategory [not null]
  authorId String
  publishedAt DateTime
  isPublished Boolean [not null, default: false]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  author users
}

Table news_and_events {
  id String [pk]
  title String [not null]
  body String [not null]
  imageUrl String
  isEmergency Boolean [not null, default: false]
  startsAt DateTime
  endsAt DateTime
  publishedAt DateTime
  isPublished Boolean [not null, default: false]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum UserRole {
  BASE
  SYSTEM_ADMIN
  INSTITUTIONAL_ADMIN
}

Enum InstitutionalCategory {
  STUDENT
  TEACHER
  STAFF
  ALUMNI
}

Enum VerificationCodeType {
  EMAIL_VERIFICATION
  PASSWORD_RESET
}

Enum ForumType {
  GENERAL
  PUBLIC
  PRIVATE
  RESTRICTED
}

Enum ForumMembershipStatus {
  ACTIVE
  PENDING
  BANNED
  INVITED
}

Enum PostStatus {
  ACTIVE
  DELETED
}

Enum CommentStatus {
  ACTIVE
  DELETED
}

Enum ReportTargetType {
  POST
  COMMENT
}

Enum ReportStatus {
  PENDING
  REVIEWED
  RESOLVED
  DISMISSED
}

Enum NotificationEventType {
  POST_CREATED
  COMMENT_CREATED
  LIKE_POST
  LIKE_COMMENT
  MENTION
  FORUM_CHANGE
  MODERATION
  REPORT_RESOLVED
}

Enum NotificationTargetType {
  POST
  COMMENT
  FORUM
  REPORT
}

Enum InstitutionalContentCategory {
  PROCESSES
  CONTACTS
  FORMS
  REGULATIONS
  GENERAL
  FAQ
}

Ref: verification_codes.userId > users.id [delete: Cascade]

Ref: forums.adminId > users.id [delete: Set Null]

Ref: forum_memberships.userId > users.id [delete: Cascade]

Ref: forum_memberships.forumId > forums.id [delete: Cascade]

Ref: forum_moderators.userId > users.id [delete: Cascade]

Ref: forum_moderators.forumId > forums.id [delete: Cascade]

Ref: posts.forumId > forums.id [delete: Cascade]

Ref: posts.authorId > users.id [delete: Restrict]

Ref: post_images.postId > posts.id [delete: Cascade]

Ref: comments.postId > posts.id [delete: Cascade]

Ref: comments.authorId > users.id [delete: Restrict]

Ref: comments.parentId - comments.id [delete: Restrict]

Ref: post_likes.userId > users.id [delete: Cascade]

Ref: post_likes.postId > posts.id [delete: Cascade]

Ref: comment_likes.userId > users.id [delete: Cascade]

Ref: comment_likes.commentId > comments.id [delete: Cascade]

Ref: reports.reportedById > users.id [delete: Restrict]

Ref: reports.reportedUserId > users.id [delete: Restrict]

Ref: reports.postId > posts.id [delete: Set Null]

Ref: reports.commentId > comments.id [delete: Set Null]

Ref: notifications.recipientId > users.id [delete: Cascade]

Ref: notifications.actorId > users.id [delete: Cascade]

Ref: notifications.forumId > forums.id [delete: Set Null]

Ref: institutional_content.authorId > users.id [delete: Set Null]